--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: LightSleep
-version: ${project.version}
+version: 1.1
 main: net.at13.lightsleep.LightSleep
 api-version: 1.16
 authors: [ AT13 ]
